# image-ranker

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  RESEARCH.md  auth.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  vercel.json
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx
components/: account-menu.tsx  icon-art.tsx  lumen-app.tsx  service-worker-registration.tsx
db/: schema.sql
hosted_worker/: __init__.py  bandit.py  blob_store.py  config.py  crawler.py  create_snapshot.ts  database.py  encoder.py  redaction.py  requirements.txt  runner.py  selfcheck.py  training.py
image_ranker/: __init__.py  cli.py  config.py  db.py  ingest.py  jobs.py  launchd.py  ml.py  ranking.py  server.py
lib/: blob-paths.ts  blob.ts  comparison-contract.ts  comparison-token.ts  crawl-policy.ts  crawl-wakeup.ts  db.ts  job-status.ts  jobs.ts  pair-connectivity.ts  ranking.ts  rating-contract.ts  rating-token.ts  redaction.ts  sandbox-policy.ts  training-cadence.ts  types.ts  worker-runtime.ts
public/: sw.js
scripts/: MIGRATION.md  apply-schema.ts  migrate-hosted.ts  provision-worker-role.ts  verify-schema.ts
tests/: __init__.py  hosted_blob.test.ts  hosted_crawl_policy.test.ts  hosted_job_status.test.ts  hosted_pwa.test.ts  hosted_ranking.test.ts  hosted_ratings.test.ts  hosted_sandbox_policy.test.ts  hosted_training_cadence.test.ts  security_redaction.test.ts  test_bandit.py  test_config.py  test_db.py  test_hosted_redaction.py  test_hosted_worker.py  test_ingest.py  test_jobs.py  (+6 more)
(+25 files in other folders)
