[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-ranker"
version = "0.1.0"
description = "A private, active-learning photography taste engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["Pillow>=10.0", "numpy>=1.26"]

[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "open-clip-torch>=2.24",
]
dev = ["pytest>=8.0"]

[project.scripts]
image-ranker = "image_ranker.cli:main"

[tool.setuptools.packages.find]
include = ["image_ranker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
